--- a/index.html
+++ b/index.html
@@ -19,7 +19,33 @@
         </ul>
     </nav>
     <header>
-        <img src="./img/Imagem do WhatsApp de 2024-03-12 à(s) 09.07.33_561ef31f.jpg"></img>
+        <div class="center"> 
+            <img src="img/Imagem do WhatsApp de 2024-03-12 à(s) 09.07.33_561ef31f.jpg"></img>   
+        </div>
+        <h1>Portfolio do tecnico</h1>
+        <h2>Feito por nickolas ulrich</h2>
     </header>
+    <main>
+        <section>
+            <h3>Sobre mim</h3>
+                <p>
+                    Meu nome é Nickolas Ulrich e sou estudante do SESI SENAI
+                     de São José. Meu interesse em fazer o curso de Desenvolvimento 
+                     de Sistemas é ingressar no mundo do trabalho com um bom currículo 
+                    e adquirir muito conhecimento na área da programação.
+                    Além disso, tenho uma paixão pela tecnologia e estou ansioso para 
+            explorar as nuances do desenvolvimento de sistemas, desde a criação
+                de aplicativos até a resolução de problemas complexos de codificação.
+                Acredito que este curso me proporcionará as habilidades essenciais
+              para enfrentar os desafios do mercado de trabalho atual e me preparará
+              para contribuir de forma significativa para projetos inovadores.
+               Estou determinado a absorver todo o conhecimento disponível e aprimorar
+           minhas habilidades técnicas, aproveitando ao máximo essa oportunidade
+              de aprendizado. Com dedicação e perseverança, espero me destacar como
+             um profissional qualificado e capacitado no campo da tecnologia da informação.
+                </p>
+        </section>
+    </main>
+    
 </body>
 </html>
